test/rules/single_criterion/cve_score_count/config.json
{
  "description": "Test single criterion rule (deny when CVE score threshold is met enough times)",
  "runKwctl": true,
  "testWorkspace": "../fixtures/",
  "rejectHostCapabilitiesInteractions": "hostcapabilities_interactions/high_vuls.yaml",
  "acceptHostCapabilitiesInteractions": "hostcapabilities_interactions/zero_vuls.yaml",
  "accept": [
    "deployments/distroless.yaml"
  ],
  "reject": [
    "deployments/image_cve_counts.yaml"
  ]
}
